src/examples/errors/no_return.del


def main() -> int {

    // If a -> return value is declared, it MUST have a return
}